swagger with params
